# Portfolio

./: CMakeLists.txt  LEARN.md  LICENSE  README.md
autovibe/: package.json  tailwind.config.js
autovibe/src/: App.jsx
autovibe/src/components/: Contact.jsx  Hero.jsx  TechStack.jsx
portfolio/: .env  index.html  package-lock.json  package.json
portfolio/public/: robots.txt  sitemap.xml
portfolio/src/: App.jsx  index.css
portfolio/src/components/: About.jsx  AvailabilityBadge.jsx  Contact.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Projects.jsx  ScrollToTop.jsx
src/: main.c
